--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section>
         <div class="all-advice-links">
             <div class="skillcrush">
-                <a href="advice/lydia-advice.html target_blank">Lydia's Advice</a><br>
+                <a href="advice/lydia-advice.html" target="_blank">Lydia's Advice</a><br>
                 <a href="advice/danielamanzotti.advice.html target_blank">Dani's Advice</a>
 				        <a href="advice/tatyananovell-advice.html" target="_blank">Tatyana's Advice </a><br/>
                 <a href="advice/JWYCadvice.html" target="_blank">JWYC's Advice </a><br />
